Fix footer on mobile phone

--- a/css/index.css
+++ b/css/index.css
@@ -260,6 +260,59 @@ select > option {
     color: #cfced1;
 }
 
+.footer {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    gap: 3rem;
+    padding: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    color: white;
+}
+
+.footer .footer-left {
+    margin-right: auto;
+    display: flex;
+    height: 100%;
+    width: 250px;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.footer .footer-left .social-links {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    font-size: 1.25rem;
+    width: 100%;
+    justify-content: center;
+    color: white;
+}
+
+.footer .footer-right {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #cfced1;
+}
+
+@media (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer .footer-left {
+        width: 100%;
+        align-items: center;
+    }
+
+    .footer .footer-right {
+        margin-top: 1rem;
+    }
+}
+
 
 @media not all and (min-width: 768px) {
     header .collapsible-header {
